@@ -1,3 +1,10 @@
+2010-11-13  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-remote-coding-commands): Add an alternative
+	using "base64 -d -i".  This is needed for older base64 versions
+	from GNU coreutils.  Reported by Klaus Reichl
+	<Klaus.Reichl@thalesgroup.com>.
+
 2010-11-06  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-handle-insert-file-contents): Do not set
